# weather-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent/: app.py
src/agent/: app.py
weather_mcp/: server.py
