[project]
name = "weather-mcp"
version = "0.1.0"
description = "MCP server for OpenWeather API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0",
    "langchain>=0.3.0",
    "langchain-openrouter>=0.2.3",
    "gradio>=5.0.0",
    "fastmcp>=3.3.1",
]

[project.scripts]
weather-mcp = "weather_mcp.server:main"
weather-agent = "agent.app:main"

[tool.setuptools]
packages = ["agent", "weather_mcp"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

